custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
// UNB Lib theme + bootstrap assets.
// @import '../../../../../vendor/unb-libraries/unb_lib_theme/assets/stylesheets/unblib';

// Subtheme local variables.
@import 'local-variables';

.description {
  color: $text-muted;
}

// Improve autocomplete.
.ui-autocomplete li:first-child:before {
  border-bottom: 1px solid $text-muted;
  color: $text-muted;
  content: 'Suggested matches';
  display: block;
  font-weight: bold;
  letter-spacing: 1px;
  margin-bottom: .5em;
  padding: .5em 0;
}
.ui-autocomplete {
  background: #f5faff;
}
.ui-autocomplete li,
.ui-autocomplete li a {
  display: block;
}

.main-container {
  margin-top: 1em;
}

/* Fix overrides.min.css / unb-lib.css conflict */
.panel-default > .panel-heading {
  color: $unb-lib-panel-heading;
}

.panel-heading a,
.panel-heading a:focus,
.panel-heading a:hover {
  background: none;
  color: $unb-lib-panel-heading;
  outline: none;
  padding-right: 0;
}
.panel-heading a:after {
  font-family: 'Glyphicons Halflings';
  content: "\e080";
  float: right;
}
.panel-heading a[aria-expanded="true"]:after {
  content: "\e114";
}

.form-item {
  transition: all linear 0.4s;
}

.messages--info {
  color: #325e1c;
  border-color: #c9e1bd #c9e1bd #c9e1bd transparent;
  box-shadow: -8px 0 0 #333;
}

.table > tbody > tr > td.field-multiple-drag {
  vertical-align: middle;
  width: 40px;
}
.tabledrag-handle {
  float: none;
}

/* unb-lib.css override */
input:not([type=button]):not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=date]) {
  line-height: normal;
}

